Made a whole lot of changes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Pager</title>
-</head>
-<body>
-    bkjkkj
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Sula Art&Illustration</title>
+  </head>
+  <body>
+    <div class="header">
+        <header>   
+            <div class="logo"><span>SULA</span>art&illustration</div>
+ 
+        <ul>
+            <div class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">This</a></li>
+                <li><a href="/">That</a></li>
+                <li><a href="/">Other</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Contact</a></li>
+            </div>
+        </ul>
+        </header>
+    </div>
+
+    <h2>PROJECTS</h2>
+    
+        <div class="container">
+            <p>
+                CRANEFLY. Fine line drawing of a Cranefly. Digitally illustrated. 
+            </p>
+            <p>
+                SEAGULL. Fine line drawing of a Seagull. Digitally illustrated. 
+            </p>
+    
+        </div>        
+        <div class="container">
+            <img src="images/FyrirVEFHrossafluga.png" alt="A drawing of a Cranefly" />
+            <img src="images/FyrirVEFSeagull.png" alt="Seagull drawing" />
+        </div>    
+        <div class="container">
+            <p>
+                HAIRY POTTER. Photograph of a happening.<br/> AK (8yo) cutting the "hair" of her potted <br/>plant named "Hairy Potter"
+            </p>
+            <p>
+                BIRDWALK. Line drawing. Pen on paper.<br/> Digitally enhanced and colored. 
+            </p>
+        </div>    
+        <div class="container">
+            <img src="images/HairyPotterSAHogAK.png" alt="Someone giving a plant a haircut" />
+            <img src="images/FyrirVefBirdWalkingSOLALD.png" alt="Drawing of a bird">
+        </div>    
+
+        <h2>About</h2>
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae nobis officiis illum
+        quo eum deserunt fuga numquam! Provident sint iusto, doloremque quae consectetur ipsa
+        harum minus enim in possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Quasi beatae nobis officiis illum quo eum deserunt fuga numquam! Provident sint iusto,
+        doloremque quae consectetur ipsa harum minus enim in possimus. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Quasi beatae nobis officiis illum quo eum deserunt fuga
+        numquam! Provident sint iusto, doloremque quae consectetur ipsa harum minus enim in
+        possimus.
+      </p>
+    </div>
+
+
+
+    <footer>
+        <p>
+             <address>
+                Created by <a href="https://github.com/PilaPina">PilaPina</a>
+            </address>
+        </p>
+    </footer>
+  </body>
 </html>
